[package]
name = "saleae-csv"
version = "0.1.0"
edition = "2021"
authors = ["Edwin Svensson <saleae_csv@olback.net>"]
readme = "README.md"
repository = "https://github.com/olback/saleae-csv-rs"
homepage = "https://github.com/olback/saleae-csv-rs"
license = "MIT OR Apache-2.0"
description = """
Parse Saleae Logic 2 CSV files in Rust
"""
keywords = ["saleae", "logic-analyzer"]
categories = ["development-tools", "encoding", "parsing"]
include = ["src/", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
